Completed with Header, data fetching will be comm in the futher

--- a/src/pages/common/scss/reset.scss
+++ b/src/pages/common/scss/reset.scss
@@ -1,3 +1,13 @@
+// Pages main styles
+
+.main-home-page {
+    width: 100%;
+    position: absolute;
+    top: 56px
+}
+
+// Pages main styles
+
 * {
     font-family: 'Robot', sans-serif;
     user-select: none;
