--- a/src/pages/common/components/Header/Header.scss
+++ b/src/pages/common/components/Header/Header.scss
@@ -7,6 +7,7 @@
     //Header contaier
     &__container {
         z-index: 4;
+        background-color: white;
         display: flex;
         align-items: center;
         justify-content: center;
@@ -109,17 +110,7 @@
     }
 
     &__user-icon {
-        cursor: pointer;
-        border-radius: 100%;
-        background-color: $list-item-hover-color;
-        padding: 0.5rem;
-        width: 2.5rem;
-        transition: all 0.2s ease;
-
-        &:hover {
-            background-color: silver;
-            transition: all 0.2s ease;
-        }
+        @include usericon();
     }
 
     &__user-item {
