--- a/src/pages/common/scss/reset.scss
+++ b/src/pages/common/scss/reset.scss
@@ -1,9 +1,20 @@
 // Pages main styles
 
-.main-home-page {
-    width: 100%;
+.main-home-page-container {
     position: absolute;
-    top: 56px
+    top: 56px;
+
+    background-color: #F0F2F5;
+
+    width: 100%;
+    height: 100%;
+    
+    .main-home-page-body {
+        display: flex;
+
+        position: relative;
+        background-color: #F0F2F5;
+    }
 }
 
 // Pages main styles
