--- a/src/pages/common/components/Header/components/scss/NavItems.scss
+++ b/src/pages/common/components/Header/components/scss/NavItems.scss
@@ -17,6 +17,8 @@
     }
 
     &__item-link {
+        position: relative;
+
         padding: 0.5rem 2rem;
 
         border-radius: $list-item-border-radius;
@@ -27,10 +29,33 @@
             background-color: $list-item-hover-color;
             transition: all 0.2s ease;
         }
+
+        &:hover > span {
+            display: block;
+        }
     }
 
     &__item-icon {
         width: 2rem;
     }
 
+}
+
+.non-hover:hover {
+    background-color: transparent;
+    transition: none;
+}
+
+.menu-helper {
+    position: absolute;
+    bottom: -100%; 
+    left: 50%;
+
+    transform: translate(-50%, -50%);
+
+    color: white;
+    background-color: black;
+    border-radius: $list-item-border-radius;
+    padding: 0.3rem 0.5rem;
+    display: none;
 }
