--- a/src/pages/common/scss/reset.scss
+++ b/src/pages/common/scss/reset.scss
@@ -1,5 +1,6 @@
 // Pages main styles
 
+//Home page
 .main-home-page-container {
     position: absolute;
     top: 56px;
@@ -8,13 +9,31 @@
 
     width: 100%;
     height: 100%;
-    
-    .main-home-page-body {
-        display: flex;
 
-        position: relative;
-        background-color: #F0F2F5;
+    .main-home-page-main {
+        display: flex;
+        justify-content: center;
     }
+}
+
+//Home page
+
+.visible {
+    opacity: 1;
+    visibility: visible;
+    transition: all 0.2s ease;
+}
+
+.hidden {
+    display: none;
+}
+
+.top {
+    transform: rotate(180deg);
+}
+
+.down {
+    transform: rotate(0deg);
 }
 
 // Pages main styles
@@ -31,8 +50,6 @@
 *,
 *:before,
 *:after {
-    -moz-box-sizing: border-box;
-    -webkit-box-sizing: border-box;
     box-sizing: border-box;
 }
 
@@ -60,9 +77,6 @@ body {
     font-size: 100%;
     line-height: 1;
     font-size: 14px;
-    -ms-text-size-adjust: 100%;
-    -moz-text-size-adjust: 100%;
-    -webkit-text-size-adjust: 100%;
 }
 
 input,
